# duck

./: .gitignore  CHANGELOG.md  LICENSE  cabal.project  duckbot.cabal  flake.nix
app/: Main.hs
src/: DuckBot.hs
src/DuckBot/: Commands.hs  Config.hs  Dbree.hs  Effects.hs  Parsing.hs  Prelude.hs  Radio.hs
src/DuckBot/Effects/: HTTP.hs  Radio.hs
