cabal-version:      2.4
name:               duckbot
version:            0.1.0.0
synopsis:           quacky discord bot
license:            MIT
license-file:       LICENSE
author:             slice
maintainer:         tinyslices@gmail.com
extra-source-files: CHANGELOG.md

common common-deps
    build-depends:
        base ^>=4.14.3.0
      , calamity==0.2.0.2
      , async
      , aeson
      , di
      , di-polysemy
      , generic-lens
      , lens
      , polysemy
      , polysemy-plugin
      , polysemy-req
      , polysemy-time
      , text
      , bytestring
      , text-show
      , carnage
      , data-default
      , colour
      , req
      , unordered-containers
      , http-client
      , time
    default-language: Haskell2010
    default-extensions:
        GADTs
        DeriveGeneric
        DuplicateRecordFields
        DataKinds
        FlexibleContexts
        OverloadedLabels
        OverloadedStrings
        TypeApplications
        TypeOperators
        NamedFieldPuns
        LambdaCase
    ghc-options:
        -fplugin=Polysemy.Plugin
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
        -Wpartial-fields
        -Wno-unused-do-bind

library
    import: common-deps
    exposed-modules:
        DuckBot
        DuckBot.Config
        DuckBot.Dbree
    hs-source-dirs: src

executable duckbot
    import: common-deps
    main-is: Main.hs

    build-depends: duckbot

    hs-source-dirs: app

    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
