cabal-version:      2.4
name:               duckbot
version:            0.1.0.0
synopsis:           quacky discord bot
license:            MIT
license-file:       LICENSE
author:             slice
maintainer:         tinyslices@gmail.com
extra-source-files: CHANGELOG.md

common common-deps
    build-depends:
        base
      , calamity==0.7.0.1
      , async
      , aeson
      , di
      , di-polysemy
      , optics
      , optics-extra
      , polysemy
      , polysemy-plugin
      , polysemy-req
      , polysemy-time
      , text
      , bytestring
      , text-show
      , data-default
      , colour
      , req
      , unordered-containers
      , http-client
      , time
    default-language: GHC2021
    default-extensions:
        GADTs
        DuplicateRecordFields
        DataKinds
        OverloadedLabels
        OverloadedStrings
        LambdaCase
        ApplicativeDo
        BlockArguments
    ghc-options:
        -fplugin=Polysemy.Plugin
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
        -Wpartial-fields
        -Wno-unused-do-bind

library
    import: common-deps
    exposed-modules:
        DuckBot
        DuckBot.Config
    hs-source-dirs: src

executable duckbot
    import: common-deps
    main-is: Main.hs

    build-depends: duckbot

    hs-source-dirs: app

    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
