cabal-version:      2.4
name:               duckbot
version:            0.1.0.0
synopsis:           quacky discord bot
license:            MIT
license-file:       LICENSE
author:             slice
maintainer:         tinyslices@gmail.com
extra-source-files: CHANGELOG.md

common common-deps
    build-depends:
        base
      , calamity
      , calamity-commands
      , async
      , aeson
      , di
      , di-polysemy
      , optics
      , optics-extra
      , polysemy
      , polysemy-plugin
      , polysemy-time
      , data-default
      , megaparsec
      , colour
      , req
      , http-client
      , time
      , relude
      , scientific
    default-language: Haskell2010
    default-extensions:
        GADTs
        DeriveGeneric
        DuplicateRecordFields
        ImportQualifiedPost
        DataKinds
        PolyKinds
        FlexibleInstances
        MultiParamTypeClasses
        UndecidableInstances
        FlexibleContexts
        ScopedTypeVariables
        OverloadedLabels
        OverloadedStrings
        TypeApplications
        TypeOperators
        NamedFieldPuns
        LambdaCase
        ApplicativeDo
        BlockArguments
        TemplateHaskell
        NumericUnderscores
        StrictData
        ConstraintKinds
    ghc-options:
        -fplugin=Polysemy.Plugin
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
        -Wpartial-fields
        -Wno-unused-do-bind
    mixins: base hiding (Prelude)
        , relude (Relude as Prelude)
        , relude

library
    import: common-deps
    exposed-modules:
        DuckBot
        DuckBot.Prelude
        DuckBot.Config
        DuckBot.Commands
        DuckBot.Radio
        DuckBot.Effects
        DuckBot.Effects.Radio
        DuckBot.Effects.HTTP
        DuckBot.Parsing
    hs-source-dirs: src

executable duckbot
    import: common-deps
    main-is: Main.hs

    build-depends: duckbot

    hs-source-dirs: app

    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
